[gd_scene load_steps=3 format=3 uid="uid://b8jkgcrh5ql3v"]

[ext_resource type="Script" uid="uid://bxwjqq4ya5rvw" path="res://scenes/game_scene/dungeon/mushroom.gd" id="1_d4vxh"]
[ext_resource type="Texture2D" uid="uid://cs7cljgetb8hy" path="res://assets/shrooms/Alien_shroom.png" id="2_bx4fm"]

[node name="mushroom" type="Node2D"]
z_index = -3
z_as_relative = false
script = ExtResource("1_d4vxh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_bx4fm")

[node name="Timer_Step_1" type="Timer" parent="."]
one_shot = true

[node name="Timer_Step_2" type="Timer" parent="."]
one_shot = true

[node name="Timer_regrow" type="Timer" parent="."]

[connection signal="timeout" from="Timer_Step_1" to="." method="_on_timer_step_1_timeout"]
[connection signal="timeout" from="Timer_Step_2" to="." method="_on_timer_step_2_timeout"]
[connection signal="timeout" from="Timer_regrow" to="." method="_on_timer_regrow_timeout"]
